Added Slack to Flatpak

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -95,6 +95,7 @@
       - me.proton.Mail
       - me.proton.Pass
       - com.bitwarden.desktop
+      - com.slack.Slack
     state: present
     method: system
 
